--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -23,7 +23,7 @@ jobs:
         run: npx playwright install --with-deps
       - name: Run Playwright tests
         timeout-minutes: 60
-        run: npx playwright test
+        run: AUTO_ALLURE_OPEN=false npx playwright test
       - name: Upload Playwright report
         uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
