--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,6 +10,10 @@ jobs:
   test:
     name: Run Playwright Tests
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+      contents: read
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
